ags (0.7.122.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* back-ported seemless mode of AgsDial
	* back-ported Lv2ui support
	* improved default theme
	* fixed configuration to use default values as soundcard busy
	* fixed clear configuration and provide default values as applying

ags (0.7.122.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* providing default theme
	* fixed ags.rc support
	* fixed cell pattern painting
	* minor fixes

ags (0.7.122.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor fixes

ags (0.7.122.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor fixes

ags (0.7.122.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* back-ported enable output ports to plugins
	* back-ported disable output ports on automation
	* back-ported enable built-in effects to do automation
	* fixed configuration in-place to reset frequency of appropriate thread
	* minor fixes

ags (0.7.122.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor fixes

ags (0.7.122)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented intermediate pre and post sync
	* refactored interfacing soundcard to do intermediate post sync
	* refactored interfacing sequencer to do intermediate pre sync
	* refactored ags_devout.c tightened the code and intermediate post sync
	* refactored ags_midiin.c intermediate pre sync
	* improved XPath doing lv2 turtle
	* fixed stop export and sequencer thread during soundcard stop
	* fixed ags_start_soundcard_finalize() without configured sequencer crashing
	* fixed potential dead-lock in ags_midiin_oss_poll() and ags_midiin_alsa_poll()
	* fixed proper termination of OSS and ALSA poll

ags (0.7.121)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed Makefile.am to use -p and -m 644 parameter

ags (0.7.120)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]