@@ -890,8 +890,6 @@ ags_audio_init(AgsAudio *audio)
 					 10);
 
     free(str);
-  }else{
-    audio->samplerate = AGS_SOUNDCARD_DEFAULT_SAMPLERATE;
   }
 
   /* buffer size */
@@ -911,8 +909,6 @@ ags_audio_init(AgsAudio *audio)
 					  10);
 
     free(str);
-  }else{
-    audio->buffer_size = AGS_SOUNDCARD_DEFAULT_BUFFER_SIZE;
   }
 
   /* format */
@@ -932,8 +928,6 @@ ags_audio_init(AgsAudio *audio)
 				     10);
 
     free(str);
-  }else{
-    audio->format = AGS_SOUNDCARD_DEFAULT_FORMAT;
   }
 
   /* channel allocation */
@@ -962,58 +956,9 @@ ags_audio_init(AgsAudio *audio)
 
   /* playback domain */
   audio->playback_domain = (GObject *) ags_playback_domain_new();
-  AGS_PLAYBACK_DOMAIN(audio->playback_domain)->domain = (GObject *) audio;
-
-  /* thread model */
-  str0 = ags_config_get_value(config,
-			      AGS_CONFIG_THREAD,
-			      "model\0");
-  str1 = ags_config_get_value(config,
-			      AGS_CONFIG_THREAD,
-			      "super-threaded-scope\0");
-
-  if(str0 != NULL && str1 != NULL){
-    if(!g_ascii_strncasecmp(str0,
-			    "super-threaded\0",
-			    15)){
-      if(!g_ascii_strncasecmp(str1,
-			      "audio\0",
-			      6) ||
-	 !g_ascii_strncasecmp(str1,
-			      "channel\0",
-			      8) ||
-	 !g_ascii_strncasecmp(str1,
-			      "recycling\0",
-			      10)){
-	gdouble freq;
-	
-	freq = ceil((gdouble) audio->samplerate / (gdouble) audio->buffer_size) + AGS_SOUNDCARD_DEFAULT_OVERCLOCK;
-	
-	g_atomic_int_or(&(AGS_PLAYBACK_DOMAIN(audio->playback_domain)->flags),
-			AGS_PLAYBACK_DOMAIN_SUPER_THREADED_AUDIO);
-
-	AGS_PLAYBACK_DOMAIN(audio->playback_domain)->audio_thread[0] = (AgsThread *) ags_audio_thread_new(NULL,
-													  (GObject *) audio);
-	AGS_PLAYBACK_DOMAIN(audio->playback_domain)->audio_thread[0]->freq = freq;
-	
-	AGS_PLAYBACK_DOMAIN(audio->playback_domain)->audio_thread[1] = (AgsThread *) ags_audio_thread_new(NULL,
-													  (GObject *) audio);
-	AGS_PLAYBACK_DOMAIN(audio->playback_domain)->audio_thread[1]->freq = freq;
-
-	AGS_PLAYBACK_DOMAIN(audio->playback_domain)->audio_thread[2] = (AgsThread *) ags_audio_thread_new(NULL,
-													  (GObject *) audio);
-	AGS_PLAYBACK_DOMAIN(audio->playback_domain)->audio_thread[2]->freq = freq;
-      }
-    }
-  }
-  
-  if(str0 != NULL){
-    free(str0);
-  }
-
-  if(str1 != NULL){
-    free(str1);
-  }
+  g_object_set(audio->playback_domain,
+	       "domain\0", audio,
+	       NULL);
 
   /* notation and automation */
   audio->notation = NULL;
