@@ -40,12 +40,19 @@ typedef struct _AgsPlaybackDomain AgsPlaybackDomain;
 typedef struct _AgsPlaybackDomainClass AgsPlaybackDomainClass;
 
 typedef enum{
-  AGS_PLAYBACK_DOMAIN_PLAYBACK                   = 1,
-  AGS_PLAYBACK_DOMAIN_SEQUENCER                  = 1 <<  1,
-  AGS_PLAYBACK_DOMAIN_NOTATION                   = 1 <<  2,
-  AGS_PLAYBACK_DOMAIN_SINGLE_THREADED            = 1 <<  3,
-  AGS_PLAYBACK_DOMAIN_SUPER_THREADED_AUDIO       = 1 <<  4,
+  AGS_PLAYBACK_DOMAIN_CONNECTED                  = 1,
+  AGS_PLAYBACK_DOMAIN_PLAYBACK                   = 1 <<  1,
+  AGS_PLAYBACK_DOMAIN_SEQUENCER                  = 1 <<  2,
+  AGS_PLAYBACK_DOMAIN_NOTATION                   = 1 <<  3,
+  AGS_PLAYBACK_DOMAIN_SINGLE_THREADED            = 1 <<  4,
+  AGS_PLAYBACK_DOMAIN_SUPER_THREADED_AUDIO       = 1 <<  5,
 }AgsPlaybackDomainFlags;
+
+typedef enum{
+  AGS_PLAYBACK_DOMAIN_THREAD_SCOPE_PLAYBACK,
+  AGS_PLAYBACK_DOMAIN_THREAD_SCOPE_SEQUENCER,
+  AGS_PLAYBACK_DOMAIN_THREAD_SCOPE_NOTATION,  
+}AgsPlaybackDomainThreadScope;
 
 struct _AgsPlaybackDomain
 {
@@ -65,6 +72,15 @@ struct _AgsPlaybackDomainClass
 };
 
 GType ags_playback_domain_get_type();
+
+void ags_playback_domain_set_audio_thread(AgsPlaybackDomain *playback_domain,
+					  AgsThread *thread,
+					  guint thread_scope);
+AgsThread* ags_playback_domain_get_audio_thread(AgsPlaybackDomain *playback_domain,
+						guint thread_scope);
+
+void ags_playback_domain_add_playback(AgsPlaybackDomain *playback_domain,
+				      GObject *playback);
 
 AgsPlaybackDomain* ags_playback_domain_new();
 
